@@ -20,7 +20,7 @@ import java.util.List;
  */
 @Slf4j
 @Service
-@Transactional(rollbackFor = Exception.class)
+@Transactional(rollbackFor = Exception.class, isolation = org.springframework.transaction.annotation.Isolation.READ_COMMITTED)
 public class ChatServiceImpl implements ChatService {
 
     @Autowired
@@ -43,6 +43,9 @@ public class ChatServiceImpl implements ChatService {
 
     @Autowired
     private com.web.service.UserPreferencesService preferencesService;
+
+    @Autowired
+    private com.web.service.MessageOutboxService messageOutboxService;
 
     @Override
     public List<ChatList> getChatList(Long userId) {
@@ -179,6 +182,7 @@ public class ChatServiceImpl implements ChatService {
     }
 
     @Override
+    @Transactional(readOnly = true, isolation = org.springframework.transaction.annotation.Isolation.REPEATABLE_READ)
     public List<Message> getChatMessages(Long userId, String chatId, Integer page, Integer size) {
         // 输入验证
         if (chatId == null || chatId.trim().isEmpty()) {
@@ -207,131 +211,14 @@ public class ChatServiceImpl implements ChatService {
 
     @Override
     public Message sendMessage(Long userId, String chatId, Message message) {
-        // 输入验证
-        if (!ValidationUtils.validateId(userId, "用户ID")) {
-            throw new WeebException("无效的用户ID");
-        }
-        if (chatId == null || chatId.trim().isEmpty()) {
-            throw new WeebException("无效的聊天ID");
-        }
-        if (message == null) {
-            throw new WeebException("消息内容不能为空");
-        }
-        if (!ValidationUtils.validateMessageType(message.getMessageType())) {
-            throw new WeebException("消息类型无效");
-        }
-
-        // 验证消息内容
-        if (message.getContent() != null && message.getContent().getContent() != null) {
-            if (!ValidationUtils.validateChatMessage(message.getContent().getContent())) {
-                throw new WeebException("消息内容无效");
-            }
-        }
-
-        // ✅ 新架构：使用String类型的chatId查询聊天信息
-        ChatList currentChat = chatAccessService.requireOwnedChat(userId, chatId);
-        if (currentChat == null) {
-            throw new WeebException("聊天会话不存在");
-        }
-
-        Long sharedChatId = currentChat.getSharedChatId();
-        if (sharedChatId == null) {
-            throw new WeebException("聊天会话配置错误：缺少共享聊天ID");
-        }
-
-        // ✅ 新架构：将消息的chatId设置为sharedChatId
-        message.setReceiverId("PRIVATE".equals(currentChat.getType()) ? currentChat.getTargetId() : null);
-        requireMessagesAllowed(message.getReceiverId());
-        message.setGroupId("GROUP".equals(currentChat.getType()) ? currentChat.getGroupId() : null);
-        validateReferencedMessage(message.getReplyToMessageId(), sharedChatId);
-        if (message.getThreadId() != null) throw new WeebException("Message threads are not enabled");
-        message.setSenderId(userId);
-        message.setStatus(Message.STATUS_SENT);
-        message.setIsRecalled(0);
-        message.setReadStatus(0);
-        message.setIsRead(0);
-        message.setChatId(sharedChatId);
-
-        // 设置消息发送时间
-        java.sql.Timestamp now = new java.sql.Timestamp(System.currentTimeMillis());
-        message.setCreatedAt(now);
-        message.setUpdatedAt(now);
-
-        // 插入消息记录
-        messageMapper.insertMessage(message);
-
-        // ✅ 新架构：更新发送方的聊天列表
-        chatListMapper.updateLastMessage(currentChat.getId(),
-                message.getContent() != null ? message.getContent().getContent() : "");
-
-        // ✅ 新架构：处理消息路由和未读计数
-        if ("GROUP".equals(currentChat.getType())) {
-            // 群聊：转发给所有群成员
-            Long groupId = currentChat.getGroupId();
-            if (groupId != null) {
-                messageBroadcastService.broadcastMessageToGroup(message, groupId);
-            }
-        } else {
-            // 私聊：确定接收者
-            Long targetReceiverId = currentChat.getTargetId();
-
-            if (targetReceiverId != null && !targetReceiverId.equals(userId)) {
-                // 查找接收者的对应聊天记录
-                ChatList receiverChatList = chatListMapper.selectChatListByUserAndTarget(targetReceiverId, userId);
-                
-                if (receiverChatList != null) {
-                    // ✅ 更新接收者的聊天列表
-                    chatListMapper.updateLastMessageAndUnreadCount(receiverChatList.getId(),
-                            message.getContent() != null ? message.getContent().getContent() : "");
-                    
-                    // 增加接收者的未读计数
-                    chatUnreadCountService.incrementUnreadCount(targetReceiverId, sharedChatId, 1);
-                } else {
-                    // ✅ 如果接收者没有聊天记录，自动创建一个（使用相同的sharedChatId）
-                    ChatList newReceiverChat = new ChatList();
-                    newReceiverChat.setId(java.util.UUID.randomUUID().toString().replace("-", ""));
-                    newReceiverChat.setUserId(targetReceiverId);
-                    newReceiverChat.setSharedChatId(sharedChatId);
-                    newReceiverChat.setTargetId(userId);
-                    newReceiverChat.setType("PRIVATE");
-                    newReceiverChat.setTargetInfo("Private Chat");
-                    newReceiverChat.setUnreadCount(1);
-                    newReceiverChat.setLastMessage(message.getContent() != null ? message.getContent().getContent() : "");
-                    chatListMapper.insertChatList(newReceiverChat);
-                    
-                    chatUnreadCountService.incrementUnreadCount(targetReceiverId, sharedChatId, 1);
-                }
-
-                // 转发消息给接收者
-                messageBroadcastService.broadcastMessageToReceiver(message, targetReceiverId);
-            }
-        }
-
-        return message;
+        ChatList chat = chatAccessService.requireOwnedChat(userId, chatId);
+        return sendMessageBySharedChatId(userId, chat.getSharedChatId(), message);
     }
 
     @Override
     public boolean markAsRead(Long userId, String chatId) {
-        // ✅ 使用String类型的chatId查询聊天信息
-        ChatList chatList = chatAccessService.requireOwnedChat(userId, chatId);
-        if (chatList == null) {
-            throw new WeebException("聊天会话不存在");
-        }
-        
-        Long sharedChatId = chatList.getSharedChatId();
-        if (sharedChatId == null) {
-            throw new WeebException("聊天会话配置错误：缺少共享聊天ID");
-        }
-        
-        // 获取最后一条消息ID
-        Message lastMessage = messageMapper.selectLastMessageByChatId(sharedChatId);
-        Long lastMessageId = lastMessage != null ? lastMessage.getId() : null;
-        
-        // ✅ 使用新的未读计数服务
-        chatUnreadCountService.markAsRead(userId, sharedChatId, lastMessageId);
-        
-        // 同时更新chat_list表
-        return chatListMapper.resetUnreadCountByChatId(chatId) > 0;
+        ChatList chat = chatAccessService.requireOwnedChat(userId, chatId);
+        return markAsReadBySharedChatId(userId, chat.getSharedChatId());
     }
 
     @Override
@@ -380,76 +267,58 @@ public class ChatServiceImpl implements ChatService {
 
     @Override
     public void addReaction(Long userId, Long messageId, String reactionType) {
-        log.info("添加消息反应: userId={}, messageId={}, reactionType={}", userId, messageId, reactionType);
-        
-        // 输入验证
-        if (!ValidationUtils.validateId(userId, "用户ID")) {
-            throw new WeebException("无效的用户ID");
-        }
-        if (!ValidationUtils.validateId(messageId, "消息ID")) {
-            throw new WeebException("无效的消息ID");
-        }
-        if (reactionType == null || reactionType.trim().isEmpty()) {
-            throw new WeebException("反应类型不能为空");
+        changeReaction(userId, messageId, reactionType, null);
+    }
+
+    @Override
+    public java.util.Map<String, Object> setReaction(Long userId, Long messageId, String reactionType, boolean present) {
+        return changeReaction(userId, messageId, reactionType, present);
+    }
+
+    private java.util.Map<String, Object> changeReaction(Long userId, Long messageId, String reactionType, Boolean present) {
+        if (reactionType == null || reactionType.isBlank()
+                || reactionType.codePointCount(0, reactionType.length()) > 50) {
+            throw new IllegalArgumentException("Invalid reaction");
         }
         reactionType = reactionType.trim();
-        if (reactionType.codePointCount(0, reactionType.length()) > 50) {
-            throw new WeebException("反应类型不能超过50个字符");
+        Message observed = messageMapper.selectMessageById(messageId);
+        if (observed == null) throw new IllegalArgumentException("Message unavailable");
+        chatAccessService.requireAccess(userId, observed.getChatId());
+        lockConversation(observed.getChatId());
+        Message message = messageMapper.selectMessageForUpdate(messageId);
+        if (message == null || Integer.valueOf(1).equals(message.getIsRecalled())) {
+            throw new IllegalArgumentException("Message unavailable");
         }
-
-        // 检查消息是否存在
-        Message message = messageMapper.selectMessageById(messageId);
-        if (message == null) {
-            throw new WeebException("消息不存在");
+        com.web.model.MessageReaction existing = messageReactionMapper.findByMessageUserAndType(messageId, userId, reactionType);
+        boolean desired = present == null ? existing == null : present;
+        boolean changed = desired != (existing != null);
+        if (changed) {
+            if (desired) {
+                com.web.model.MessageReaction reaction = new com.web.model.MessageReaction();
+                reaction.setMessageId(messageId);
+                reaction.setUserId(userId);
+                reaction.setReactionType(reactionType);
+                reaction.setCreatedAt(new java.sql.Timestamp(System.currentTimeMillis()));
+                messageReactionMapper.insert(reaction);
+            } else {
+                messageReactionMapper.deleteByMessageUserAndType(messageId, userId, reactionType);
+            }
+            messageMapper.incrementReactionVersion(messageId);
+            message.setReactionVersion((message.getReactionVersion() == null ? 0 : message.getReactionVersion()) + 1);
         }
-        chatAccessService.requireAccess(userId, message.getChatId());
-
-        // 检查用户是否已经对该消息添加了相同的反应
-        com.web.model.MessageReaction existingReaction = messageReactionMapper.findByMessageUserAndType(
-            messageId, userId, reactionType);
-
-        if (existingReaction != null) {
-            // 如果已存在，则删除（取消反应）
-            messageReactionMapper.deleteByMessageUserAndType(messageId, userId, reactionType);
-            log.info("取消消息反应: userId={}, messageId={}, reactionType={}", userId, messageId, reactionType);
-        } else {
-            // 如果不存在，则添加
-            com.web.model.MessageReaction reaction = new com.web.model.MessageReaction();
-            reaction.setMessageId(messageId);
-            reaction.setUserId(userId);
-            reaction.setReactionType(reactionType);
-            reaction.setCreatedAt(new java.sql.Timestamp(System.currentTimeMillis()));
-            
-            messageReactionMapper.insert(reaction);
-            log.info("添加消息反应成功: reactionId={}", reaction.getId());
-        }
-
-        // ✅ 关键：广播反应变更给所有相关用户
-        try {
-            // 获取消息的聊天ID
-            Long chatId = message.getChatId();
-            
-            // 获取该消息的所有反应统计
-            List<java.util.Map<String, Object>> reactionStats = reactionSummaries(List.of(messageId))
-                    .getOrDefault(messageId, List.of());
-            
-            // 构造广播数据
-            java.util.Map<String, Object> reactionData = new java.util.HashMap<>();
-            reactionData.put("messageId", messageId);
-            reactionData.put("chatId", chatId);
-            reactionData.put("userId", userId);
-            reactionData.put("reactionType", reactionType);
-            reactionData.put("action", existingReaction != null ? "remove" : "add");
-            reactionData.put("reactions", reactionStats);
-            
-            // 广播反应变更
-            messageBroadcastService.broadcastReactionChange(chatId, reactionData);
-            
-            log.info("广播消息反应变更成功: messageId={}, chatId={}", messageId, chatId);
-        } catch (Exception e) {
-            log.error("广播消息反应变更失败: messageId={}", messageId, e);
-            // 不抛出异常，因为反应已经保存成功
-        }
+        java.util.Map<String, Object> result = new java.util.LinkedHashMap<>();
+        result.put("type", "MESSAGE_REACTION_CHANGE");
+        result.put("messageId", messageId);
+        result.put("chatId", message.getChatId());
+        result.put("sharedChatId", message.getChatId());
+        result.put("userId", userId);
+        result.put("reactionType", reactionType);
+        result.put("action", desired ? "add" : "remove");
+        result.put("reactionVersion", message.getReactionVersion() == null ? 0L : message.getReactionVersion());
+        result.put("reactions", reactionSummaries(List.of(messageId)).getOrDefault(messageId, List.of()));
+        if (changed) messageOutboxService.enqueue("REACTION:" + messageId + ":" + result.get("reactionVersion"),
+                "REACTION", message.getChatId(), messageId, messageMapper.selectCurrentRecipients(message.getChatId()), result);
+        return result;
     }
 
     @Override
@@ -546,6 +415,7 @@ public class ChatServiceImpl implements ChatService {
     // ==================== ✅ 新增：基于sharedChatId的方法实现 ====================
 
     @Override
+    @Transactional(readOnly = true, isolation = org.springframework.transaction.annotation.Isolation.REPEATABLE_READ)
     public List<Message> getChatMessagesBySharedChatId(Long userId, Long sharedChatId, Integer page, Integer size) {
         // 输入验证
         if (!ValidationUtils.validateId(sharedChatId, "共享聊天ID")) {
@@ -562,35 +432,20 @@ public class ChatServiceImpl implements ChatService {
 
     @Override
     public Message sendMessageBySharedChatId(Long userId, Long sharedChatId, Message message) {
-        // 输入验证
-        if (!ValidationUtils.validateId(userId, "用户ID")) {
-            throw new WeebException("无效的用户ID");
-        }
-        if (!ValidationUtils.validateId(sharedChatId, "共享聊天ID")) {
-            throw new WeebException("无效的共享聊天ID");
-        }
-        if (message == null) {
-            throw new WeebException("消息内容不能为空");
-        }
-        if (!ValidationUtils.validateMessageType(message.getMessageType())) {
-            throw new WeebException("消息类型无效");
-        }
-
-        // 验证消息内容
-        if (message.getContent() != null && message.getContent().getContent() != null) {
-            if (!ValidationUtils.validateChatMessage(message.getContent().getContent())) {
-                throw new WeebException("消息内容无效");
-            }
-        }
-
-        // ✅ 直接使用sharedChatId
         chatAccessService.requireAccess(userId, sharedChatId);
+        if (message == null || !ValidationUtils.validateMessageType(message.getMessageType())
+                || message.getContent() == null || !ValidationUtils.validateChatMessage(message.getContent().getContent())) {
+            throw new IllegalArgumentException("Invalid message content or type");
+        }
+        String clientId = message.getClientMessageId();
+        if (clientId != null && (clientId.isBlank() || clientId.length() > 100)) {
+            throw new IllegalArgumentException("Client message ID must contain 1 to 100 characters");
+        }
+        lockConversation(sharedChatId);
         ChatList senderChat = chatListMapper.selectChatListByUserIdAndSharedChatId(userId, sharedChatId);
         if (senderChat == null) {
             com.web.model.Group group = chatListMapper.selectGroupBySharedChatId(sharedChatId);
-            if (group == null) {
-                throw new org.springframework.security.access.AccessDeniedException("Conversation unavailable");
-            }
+            if (group == null) throw new org.springframework.security.access.AccessDeniedException("Conversation unavailable");
             senderChat = createChatListForGroupMember(userId, group);
         }
         message.setReceiverId("PRIVATE".equals(senderChat.getType()) ? senderChat.getTargetId() : null);
@@ -599,138 +454,127 @@ public class ChatServiceImpl implements ChatService {
         validateReferencedMessage(message.getReplyToMessageId(), sharedChatId);
         if (message.getThreadId() != null) throw new WeebException("Message threads are not enabled");
         message.setSenderId(userId);
+        message.setChatId(sharedChatId);
+        if (message.getContent().getAtUidList() == null) message.getContent().setAtUidList(List.of());
+        if (clientId != null) {
+            Message existing = messageMapper.selectBySenderAndClientIdForUpdate(userId, clientId);
+            if (existing != null) return requireSameMessage(existing, message);
+        }
+        message.setId(null);
         message.setStatus(Message.STATUS_SENT);
         message.setIsRecalled(0);
         message.setReadStatus(0);
         message.setIsRead(0);
-        message.setChatId(sharedChatId);
-
-        // 设置消息发送时间
+        message.setReactionVersion(0L);
         java.sql.Timestamp now = new java.sql.Timestamp(System.currentTimeMillis());
         message.setCreatedAt(now);
         message.setUpdatedAt(now);
-
-        // 插入消息记录
-        messageMapper.insertMessage(message);
-
-        // ✅ 查找发送者和接收者的chat_list记录
-        if (senderChat != null) {
-            // 更新发送者的聊天列表
-            chatListMapper.updateLastMessage(senderChat.getId(),
-                    message.getContent() != null ? message.getContent().getContent() : "");
+        try {
+            messageMapper.insertMessage(message);
+        } catch (org.springframework.dao.DuplicateKeyException duplicate) {
+            Message existing = clientId == null ? null : messageMapper.selectBySenderAndClientIdForUpdate(userId, clientId);
+            if (existing == null) throw duplicate;
+            return requireSameMessage(existing, message);
         }
-
-        // ✅ 确定接收者并更新其聊天列表
-        if (senderChat != null && "PRIVATE".equals(senderChat.getType())) {
-            Long targetReceiverId = senderChat.getTargetId();
-
-            if (targetReceiverId != null && !targetReceiverId.equals(userId)) {
-                // 查找接收者的对应聊天记录
-                ChatList receiverChatList = chatListMapper.selectChatListByUserAndTarget(targetReceiverId, userId);
-                
-                if (receiverChatList != null) {
-                    // 更新接收者的聊天列表
-                    chatListMapper.updateLastMessageAndUnreadCount(receiverChatList.getId(),
-                            message.getContent() != null ? message.getContent().getContent() : "");
-                    
-                    // 增加接收者的未读计数
-                    chatUnreadCountService.incrementUnreadCount(targetReceiverId, sharedChatId, 1);
-                } else {
-                    // 如果接收者没有聊天记录，自动创建一个（使用相同的sharedChatId）
-                    ChatList newReceiverChat = new ChatList();
-                    newReceiverChat.setId(java.util.UUID.randomUUID().toString().replace("-", ""));
-                    newReceiverChat.setUserId(targetReceiverId);
-                    newReceiverChat.setSharedChatId(sharedChatId);
-                    newReceiverChat.setTargetId(userId);
-                    newReceiverChat.setType("PRIVATE");
-                    newReceiverChat.setTargetInfo("Private Chat");
-                    newReceiverChat.setUnreadCount(1);
-                    newReceiverChat.setLastMessage(message.getContent() != null ? message.getContent().getContent() : "");
-                    chatListMapper.insertChatList(newReceiverChat);
-                    
-                    chatUnreadCountService.incrementUnreadCount(targetReceiverId, sharedChatId, 1);
-                }
-
-                // 转发消息给接收者
-                messageBroadcastService.broadcastMessageToReceiver(message, targetReceiverId);
-            }
-        } else if (senderChat != null && "GROUP".equals(senderChat.getType())) {
-            // 群聊：转发给所有群成员
-            Long groupId = senderChat.getGroupId();
-            if (groupId != null) {
-                messageBroadcastService.broadcastMessageToGroup(message, groupId);
+        chatListMapper.updateLastMessage(senderChat.getId(), message.getContent().getContent());
+        if (message.getReceiverId() != null
+                && chatListMapper.selectChatListByUserAndTarget(message.getReceiverId(), userId) == null) {
+            ChatList receiver = new ChatList();
+            receiver.setId(sharedChatId + "_" + message.getReceiverId());
+            receiver.setUserId(message.getReceiverId());
+            receiver.setSharedChatId(sharedChatId);
+            receiver.setTargetId(userId);
+            receiver.setType("PRIVATE");
+            receiver.setTargetInfo("Private Chat");
+            receiver.setUnreadCount(0);
+            chatListMapper.insertChatList(receiver);
+        }
+        List<Long> recipients = messageMapper.selectCurrentRecipients(sharedChatId);
+        for (Long recipient : recipients) {
+            if (recipient != null && !recipient.equals(userId)) {
+                chatUnreadCountService.incrementUnreadCount(recipient, sharedChatId, 1);
             }
         }
-
+        messageOutboxService.enqueueMessage(message, recipients);
         return message;
+    }
+
+    private Message requireSameMessage(Message existing, Message requested) {
+        if (!java.util.Objects.equals(existing.getChatId(), requested.getChatId())
+                || !java.util.Objects.equals(existing.getMessageType(), requested.getMessageType())
+                || !java.util.Objects.equals(existing.getContent(), requested.getContent())
+                || !java.util.Objects.equals(existing.getReplyToMessageId(), requested.getReplyToMessageId())) {
+            throw new IllegalArgumentException("Client message ID already used for different content or conversation");
+        }
+        return existing;
+    }
+
+    private void lockConversation(Long sharedChatId) {
+        if (messageMapper.lockSharedChat(sharedChatId) == null) {
+            throw new org.springframework.security.access.AccessDeniedException("Conversation unavailable");
+        }
     }
 
     @Override
     public boolean markAsReadBySharedChatId(Long userId, Long sharedChatId) {
-        // 输入验证
-        if (!ValidationUtils.validateId(userId, "用户ID")) {
-            throw new WeebException("无效的用户ID");
-        }
-        if (!ValidationUtils.validateId(sharedChatId, "共享聊天ID")) {
-            throw new WeebException("无效的共享聊天ID");
-        }
-
-        log.info("🔍 标记已读: userId={}, sharedChatId={}", userId, sharedChatId);
-
-        // 查找用户的chat_list记录
-        chatAccessService.requireAccess(userId, sharedChatId);
-        ChatList chatList = chatListMapper.selectChatListByUserIdAndSharedChatId(userId, sharedChatId);
-        
-        // ✅ 修复：如果chat_list记录不存在，尝试自动创建（针对群组）
-        if (chatList == null) {
-            log.warn("⚠️ chat_list记录不存在，尝试自动修复: userId={}, sharedChatId={}", userId, sharedChatId);
-            
-            // 方案1: 检查是否是群组的shared_chat_id
-            com.web.model.Group group = findGroupBySharedChatId(sharedChatId);
-            
-            // 方案2: 如果方案1失败，检查sharedChatId是否实际上是groupId（前端可能传错了）
-            if (group == null) {
-                log.warn("⚠️ 未找到shared_chat_id={}的群组，尝试作为groupId查找", sharedChatId);
-                group = findGroupById(sharedChatId);
-                if (group != null && group.getSharedChatId() != null) {
-                    log.info("✅ 找到群组，但传入的是groupId而非sharedChatId。groupId={}, 正确的sharedChatId={}", 
-                        sharedChatId, group.getSharedChatId());
-                    // 递归调用，使用正确的sharedChatId
-                    return markAsReadBySharedChatId(userId, group.getSharedChatId());
-                }
-            }
-            
-            if (group != null) {
-                log.info("✅ 找到群组: groupId={}, groupName={}, sharedChatId={}", 
-                    group.getId(), group.getGroupName(), group.getSharedChatId());
-                
-                // 检查用户是否是群成员
-                if (isUserGroupMember(userId, group.getId())) {
-                    // 自动为该用户创建chat_list记录
-                    chatList = createChatListForGroupMember(userId, group);
-                    log.info("✅ 自动为群成员创建chat_list记录: userId={}, groupId={}, sharedChatId={}", 
-                        userId, group.getId(), group.getSharedChatId());
-                } else {
-                    log.error("❌ 用户不是群成员: userId={}, groupId={}", userId, group.getId());
-                    throw new WeebException("您不是该群组成员");
-                }
-            } else {
-                log.error("❌ 未找到对应的群组或私聊: sharedChatId={}", sharedChatId);
-                throw new WeebException("聊天会话不存在");
-            }
-        }
-        
-        // 获取最后一条消息ID
-        Message lastMessage = messageMapper.selectLastMessageByChatId(sharedChatId);
-        Long lastMessageId = lastMessage != null ? lastMessage.getId() : null;
-        
-        // 使用新的未读计数服务
-        chatUnreadCountService.markAsRead(userId, sharedChatId, lastMessageId);
-        
-        // 同时更新chat_list表
-        return chatListMapper.resetUnreadCountByChatId(chatList.getId()) > 0;
+        markAsReadBySharedChatId(userId, sharedChatId, null);
+        return true;
     }
-    
+
+    @Override
+    public java.util.Map<String, Object> markAsReadBySharedChatId(Long userId, Long sharedChatId, Long lastReadMessageId) {
+        chatAccessService.requireAccess(userId, sharedChatId);
+        lockConversation(sharedChatId);
+        Long boundary = lastReadMessageId;
+        if (boundary == null) boundary = messageMapper.selectLatestMessageId(sharedChatId);
+        if (boundary == null) boundary = 0L;
+        if (boundary < 0) throw new IllegalArgumentException("Invalid read boundary");
+        if (boundary > 0) {
+            Message lastRead = messageMapper.selectMessageForUpdate(boundary);
+            if (lastRead == null || !sharedChatId.equals(lastRead.getChatId())) {
+                throw new org.springframework.security.access.AccessDeniedException("Read boundary is outside this conversation");
+            }
+        }
+        long actualBoundary = chatUnreadCountService.markThrough(userId, sharedChatId, boundary);
+        java.util.Map<String, Object> result = new java.util.LinkedHashMap<>();
+        result.put("chatId", sharedChatId);
+        result.put("sharedChatId", sharedChatId);
+        result.put("messageId", actualBoundary);
+        result.put("lastReadMessageId", actualBoundary);
+        result.put("readerId", userId);
+        result.put("status", Message.STATUS_READ);
+        result.put("unreadCount", chatUnreadCountService.getUnreadCount(userId, sharedChatId));
+        if (actualBoundary > 0) messageOutboxService.enqueue("READ:" + userId + ":" + actualBoundary,
+                "READ", sharedChatId, actualBoundary, messageMapper.selectCurrentRecipients(sharedChatId), result);
+        return result;
+    }
+
+    @Override
+    @Transactional(readOnly = true, isolation = org.springframework.transaction.annotation.Isolation.REPEATABLE_READ)
+    public java.util.Map<String, Object> syncMessages(Long userId, Long sharedChatId, Long afterMessageId, int size) {
+        chatAccessService.requireAccess(userId, sharedChatId);
+        if (afterMessageId == null || afterMessageId < 0 || size < 1 || size > 100) {
+            throw new IllegalArgumentException("Invalid message synchronization cursor or size");
+        }
+        List<Message> fetched = messageMapper.selectMessagesAfter(sharedChatId, afterMessageId, size + 1);
+        boolean more = fetched.size() > size;
+        List<Message> page = more ? new java.util.ArrayList<>(fetched.subList(0, size)) : fetched;
+        populateMessageReactions(page);
+        long next = page.isEmpty() ? afterMessageId : page.get(page.size() - 1).getId();
+        return java.util.Map.of("list", page, "nextAfterMessageId", next, "hasMore", more);
+    }
+
+    @Override
+    @Transactional(readOnly = true, isolation = org.springframework.transaction.annotation.Isolation.REPEATABLE_READ)
+    public List<Message> getMessageStates(Long userId, Long sharedChatId, List<Long> messageIds) {
+        chatAccessService.requireAccess(userId, sharedChatId);
+        if (messageIds == null || messageIds.isEmpty() || messageIds.size() > 100
+                || messageIds.stream().anyMatch(id -> id == null || id <= 0)) {
+            throw new IllegalArgumentException("Request between 1 and 100 valid message IDs");
+        }
+        return populateMessageReactions(messageMapper.selectMessageStates(sharedChatId, messageIds.stream().distinct().toList()));
+    }
+
     /**
      * 根据sharedChatId查找群组
      */
